snapshots/syntax/library/functions/string/instrrev/instrrev_nested_call.snap
---
source: src/syntax/library/functions/string/instrrev.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: SubStatement
      children:
        - kind: SubKeyword
          text: Sub
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: Test
        - kind: ParameterList
          children:
            - kind: LeftParenthesis
              text: (
            - kind: RightParenthesis
              text: )
        - kind: Newline
          text: "\n"
        - kind: StatementList
          children:
            - kind: Whitespace
              text: "    "
            - kind: AssignmentStatement
              children:
                - kind: IdentifierExpression
                  children:
                    - kind: Identifier
                      text: extension
                - kind: Whitespace
                  text: " "
                - kind: EqualityOperator
                  text: "="
                - kind: Whitespace
                  text: " "
                - kind: CallExpression
                  children:
                    - kind: Identifier
                      text: UCase$
                    - kind: LeftParenthesis
                      text: (
                    - kind: ArgumentList
                      children:
                        - kind: Argument
                          children:
                            - kind: CallExpression
                              children:
                                - kind: Identifier
                                  text: Mid$
                                - kind: LeftParenthesis
                                  text: (
                                - kind: ArgumentList
                                  children:
                                    - kind: Argument
                                      children:
                                        - kind: IdentifierExpression
                                          children:
                                            - kind: Identifier
                                              text: fileName
                                    - kind: Comma
                                      text: ","
                                    - kind: Whitespace
                                      text: " "
                                    - kind: Argument
                                      children:
                                        - kind: BinaryExpression
                                          children:
                                            - kind: CallExpression
                                              children:
                                                - kind: Identifier
                                                  text: InStrRev
                                                - kind: LeftParenthesis
                                                  text: (
                                                - kind: ArgumentList
                                                  children:
                                                    - kind: Argument
                                                      children:
                                                        - kind: IdentifierExpression
                                                          children:
                                                            - kind: Identifier
                                                              text: fileName
                                                    - kind: Comma
                                                      text: ","
                                                    - kind: Whitespace
                                                      text: " "
                                                    - kind: Argument
                                                      children:
                                                        - kind: StringLiteralExpression
                                                          children:
                                                            - kind: StringLiteral
                                                              text: "\".\""
                                                - kind: RightParenthesis
                                                  text: )
                                            - kind: Whitespace
                                              text: " "
                                            - kind: AdditionOperator
                                              text: +
                                            - kind: Whitespace
                                              text: " "
                                            - kind: NumericLiteralExpression
                                              children:
                                                - kind: IntegerLiteral
                                                  text: "1"
                                - kind: RightParenthesis
                                  text: )
                    - kind: RightParenthesis
                      text: )
                - kind: Newline
                  text: "\n"
        - kind: EndKeyword
          text: End
        - kind: Whitespace
          text: " "
        - kind: SubKeyword
          text: Sub
        - kind: Newline
          text: "\n"
